crates/shipper-core/src/runtime/environment/snapshots/shipper_core__runtime__environment__snapshot_tests__ci_environment_all_debug_variants.snap
---
source: crates/shipper-core/src/runtime/environment/mod.rs
expression: variants
---
- GitHubActions
- GitLabCI
- CircleCI
- TravisCI
- AzurePipelines
- Jenkins
- BitbucketPipelines
- Local
