crates/shipper-core/src/runtime/environment/snapshots/shipper_core__runtime__environment__snapshot_tests__ci_environment_all_display_variants.snap
---
source: crates/shipper/src/runtime/environment/mod.rs
expression: variants
---
- GitHub Actions
- GitLab CI
- CircleCI
- Travis CI
- Azure Pipelines
- Jenkins
- Bitbucket Pipelines
- Local
