crates/shipper-core/src/runtime/environment/snapshots/shipper_core__runtime__environment__snapshot_tests__ci_environment_serialization.snap
---
source: crates/shipper-core/src/runtime/environment/mod.rs
expression: serialized
---
- "\"GitHubActions\""
- "\"GitLabCI\""
- "\"CircleCI\""
- "\"TravisCI\""
- "\"AzurePipelines\""
- "\"Jenkins\""
- "\"BitbucketPipelines\""
- "\"Local\""
