crates/shipper-core/src/runtime/environment/snapshots/shipper_core__runtime__environment__snapshot_tests__environment_fingerprint_structured_unknown_versions.snap
---
source: crates/shipper-core/src/runtime/environment/mod.rs
expression: fp
---
shipper_version: 0.3.0
cargo_version: ~
rust_version: ~
os: windows
arch: aarch64
