crates/shipper-core/src/runtime/environment/snapshots/shipper_core__runtime__environment__snapshot_tests__environment_info_fingerprint_github_actions_with_vars.snap
---
source: crates/shipper-core/src/runtime/environment/mod.rs
expression: info
---
ci_environment: GitHubActions
os: linux
arch: x86_64
rust_version: 1.80.0
cargo_version: 1.80.0
env_vars:
  GITHUB_REF: refs/heads/main
  GITHUB_REPOSITORY: owner/repo
  GITHUB_RUN_ID: "12345"
  GITHUB_SHA: abc123def456789
collected_at: "2025-06-01T12:00:00Z"
