crates/shipper-core/src/runtime/environment/snapshots/shipper_core__runtime__environment__snapshot_tests__environment_info_fingerprint_local_no_vars.snap
---
source: crates/shipper/src/runtime/environment/mod.rs
expression: info
---
ci_environment: Local
os: linux
arch: x86_64
rust_version: 1.80.0
cargo_version: 1.80.0
env_vars: {}
collected_at: "2025-01-01T00:00:00Z"
