crates/shipper-core/src/runtime/environment/snapshots/shipper_core__runtime__environment__snapshot_tests__environment_info_fingerprint_string_ci_with_vars.snap
---
source: crates/shipper-core/src/runtime/environment/mod.rs
expression: info.fingerprint()
---
"ci:GitHub Actions|os:linux|arch:x86_64|rust:1.80.0|cargo:1.80.0|CI:true|GITHUB_SHA:deadbeef"
