crates/shipper-core/src/runtime/environment/snapshots/shipper_core__runtime__environment__snapshot_tests__environment_info_fingerprint_string_local.snap
---
source: crates/shipper/src/runtime/environment/mod.rs
expression: info.fingerprint()
---
"ci:Local|os:macos|arch:aarch64|rust:1.82.0|cargo:1.82.0"
