crates/shipper-core/src/runtime/environment/snapshots/shipper_core__runtime__environment__snapshot_tests__environment_info_many_env_vars.snap
---
source: crates/shipper-core/src/runtime/environment/mod.rs
expression: info.fingerprint()
---
"ci:GitHub Actions|os:linux|arch:x86_64|rust:1.80.0|cargo:1.80.0|CI:true|GITHUB_REF:refs/tags/v1.0.0|GITHUB_REPOSITORY:owner/repo|GITHUB_RUN_ID:999|GITHUB_RUN_NUMBER:42|GITHUB_SHA:abcdef1234567890"
